--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
+title: '@ReinaldoPadua'
+author: 'Reinaldo de Padua'
+description: 'Really cool blog about ... something'
 permalink: /:title/
-lang: "en"
+lang: 'pt-br'
 
-show_footer: false           # show the "previous" and "next" links at the end of each post
-dark_theme: false            # use the dark mode as default
-dark_header: true            # keep the header dark
-dark_footer: false           # keep the footer dark
-# style: minimal             # use a simpler style inspired by the minima theme
+show_footer: true # show the "previous" and "next" links at the end of each post
+dark_theme: true # use the dark mode as default
+dark_header: true # keep the header dark
+dark_footer: true # keep the footer dark
+style: minimal # use a simpler style inspired by the minima theme
 
-navigation:                  # site navigation in the header
+navigation: # site navigation in the header
   - README.md
-  - Github: "http://github.com/niklasbuschmann/contrast"
+  - Github: 'https://github.com/ReinaldoPadua'
 
 #icons:                      # icons in the header, see http://fontawesome.com/icons
 #  envelope: "mailto:niklasbuschmann@users.noreply.github.com"
 #  github: "https://github.com/niklasbuschmann/contrast"
 #  rss: "/contrast/feed.xml"
 
-comments:                    # embed disqus or isso comments
+comments: # embed disqus or isso comments
 #  disqus: ""
 #  isso: ""
 
 plugins:
- - jekyll-feed
- - jekyll-default-layout
+  - jekyll-feed
+  - jekyll-default-layout
