--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navigation: # site navigation in the header
 #  github: "https://github.com/niklasbuschmann/contrast"
 #  rss: "/contrast/feed.xml"
 
-comments: # embed disqus or isso comments
+comments: true # embed disqus or isso comments
 #  disqus: ""
 #  isso: ""
 
