--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ dark_footer: true # keep the footer dark
 style: minimal # use a simpler style inspired by the minima theme
 
 navigation: # site navigation in the header
+  - TOOLS.md
   - README.md
   - Github: 'https://github.com/ReinaldoPadua'
 
