--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: '@ReinaldoPadua'
+title: 'Dev Tools'
 author: 'Reinaldo de Padua'
 description: 'Really cool blog about ... something'
 permalink: /:title/
